2/assets/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: the-service
  namespace: demo-acm-app
spec:
  selector:
    deployment: hello
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
