2/assets/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: the-route
  namespace: demo-acm-app
spec:
  host: changeme
  port:
    targetPort: 8080
  to:
    kind: Service
    name: the-service
    weight: 100
status:
  ingress: []
